<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/blog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/blog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_content_hint"
        />

    <Button
        android:id="@+id/add_blog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_custom"
        android:text="@string/add" />

    <Button
        android:id="@+id/go_on_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/btn_custom_danger"
        android:text="@string/cancel" />

</LinearLayout>