<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/author_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/author_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/author_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_content_hint"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/update_button"
            android:text="@string/update"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_button"
            android:text="@string/delete"
            android:layout_width="170dp"
            android:background="@drawable/btn_custom_danger"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toStartOf="@+id/update_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/server_request"
        android:layout_width="match_parent"
        android:layout_height="141dp" />

    <Button
        android:id="@+id/go_on_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/go_to_main" />
</LinearLayout>