<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/blog_author_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="?android:listSeparatorTextViewStyle"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/blog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/blog_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/blog_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/blog_content_hint"
        />
    <Button android:id="@+id/blog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/update_button"
            android:text="@string/update"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/delete_button"
            android:background="@drawable/btn_custom"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_button"
            android:text="@string/delete"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_custom_danger"
            app:layout_constraintEnd_toStartOf="@+id/update_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/go_on_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_custom"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/go_to_main" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_comments_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <Button android:id="@+id/add_com"
        android:text="@string/add_comm"
        android:background="@drawable/btn_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp">
    </androidx.recyclerview.widget.RecyclerView>



</LinearLayout>