<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_content_label"
        style="?android:listSeparatorTextViewStyle"
        />
    <EditText android:id="@+id/content_comm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment_text_view"
        android:maxLength="300"
        />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/update_button"
            android:text="@string/update"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/btn_custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/go_on_main"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/go_on_main"
            android:text="@string/cancel"
            android:layout_width="170dp"
            android:background="@drawable/btn_custom_danger"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintEnd_toStartOf="@+id/update_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/server_request"
        android:layout_width="match_parent"
        android:layout_height="141dp" />


</LinearLayout>